--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.1.3",
+    "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.11"
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@antfu/eslint-config": "^2.27.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.11"
+    "eslint": "^8.57.1",
+    "eslint-config-next": "14.2.11",
+    "typescript": "^5"
   }
 }
