--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.3",
     "next": "14.2.11",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "rss-parser": "^3.13.0"
